// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-text Renders with all props provided 1`] = `
<form-control-text exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <div class="d-flex gap-2">
      <label class="form-label" htmlfor="email" part="label">
        Email
      </label>
      <form-control-tooltip helptext="Enter your email"></form-control-tooltip>
    </div>
    <input class="form-control is-invalid" disabled="" id="email" maxlength="50" name="email" part="input input-invalid  input-disabled" type="text" value="user@example.com">
    <form-control-error-text>
      <small class="form-text text-danger" id="form-error-text-email">
        Invalid email
      </small>
    </form-control-error-text>
  </div>
</form-control-text>
`;

exports[`form-control-text Renders with default props 1`] = `
<form-control-text exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <div class="d-flex gap-2">
      <label class="form-label" htmlfor="username" part="label">
        Username
      </label>
      <form-control-tooltip></form-control-tooltip>
    </div>
    <input class="form-control" id="username" name="username" part="input " type="text" value="">
    <form-control-error-text></form-control-error-text>
  </div>
</form-control-text>
`;
